--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,17 @@
+.image-card img {
+    -webkit-transition: 0.4s ease;
+    transition: 0.4s ease;
+  }
+  
+  .zoom-effect-container:hover .image-card img {
+    -webkit-transform: scale(1.08);
+    transform: scale(1.08);
+  }
 
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-}
-
-.video-container {
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto; /* Center the video container horizontally */
-}
-
-/* Responsive styles */
-@media only screen and (max-width: 600px) {
-    .video-container {
-        max-width: 100%;
-    }
-}
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+ 
